--- a/html/contact.html
+++ b/html/contact.html
@@ -71,7 +71,7 @@
     <h3>Contact Form</h3>
 
 <div class="container">
-  <form action="/action_page.php">
+  <form action="mailto:nenspatel2001@gmail.com" enctype="text/plain" method="post">
     <label for="fname">First Name</label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
